Social media tags complete

--- a/product/aerolite-shell.html
+++ b/product/aerolite-shell.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="AeroShell Lite | Lightweight Wind-Resistant Jacket | Rainy Days">
     <meta property="og:description" content="Lightweight and wind-resistant shell jacket built for performance in unpredictable weather. Breathable, packable, and made for comfort on every journey.">
     <meta property="og:image" content="https://lektordahle.github.io/html-css-egil-dahle/images/social/aerolite-shell.webp">
-    <meta property="og:url" content="https://lektordahle.github.io/html-css-egil-dahle/content-overview">
+    <meta property="og:url" content="https://lektordahle.github.io/html-css-egil-dahle/product/aerolite-shell.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Rainy Days">
     <!-- Twitter Card -->
