--- a/product/trail-master-gtx.html
+++ b/product/trail-master-gtx.html
@@ -28,6 +28,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <!-- Open Graph Cards -->
+    <meta property="og:title" content="TrailMaster GTX | All-Terrain Adventure Jacket | Rainy Days">
+    <meta property="og:description" content="Durable adventure jacket built for performance and protection. Waterproof, windproof, and made for riders who go further.">
+    <meta property="og:image" content="https://lektordahle.github.io/html-css-egil-dahle/images/social/trail-master-gtx.webp">
+    <meta property="og:url" content="https://lektordahle.github.io/html-css-egil-dahle/product/trailmaster-gtx.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Rainy Days">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TrailMaster GTX | All-Terrain Adventure Jacket | Rainy Days">
+    <meta name="twitter:description" content="Durable adventure jacket built for performance and protection. Waterproof, windproof, and made for riders who go further.">
+    <meta name="twitter:image" content="https://lektordahle.github.io/html-css-egil-dahle/images/social/trailmaster-gtx.webp">
 </head>
 
 <body>
