Product page fix

--- a/product/crimson-motion.html
+++ b/product/crimson-motion.html
@@ -104,14 +104,12 @@
             <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Crimson Motion Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The Crimson Motion is a performance-oriented softshell jacket built for active days in
+                variable weather. Its stretch fabric and ergonomic design provide freedom of movement,
+                while wind protection and breathable panels keep you comfortable in motion. Durable,
+                bold, and made to move - wherever your day takes you.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
