--- a/product/everwool-fleece.html
+++ b/product/everwool-fleece.html
@@ -104,14 +104,12 @@
             <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="EverWool Fleece Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The EverWool Fleece delivers everyday warmth and comfort with a classic, timeless design.
+                Crafted from soft, insulating wool-blend fleece, it offers the perfect balance of breathability
+                and coziness. Durable seams, zippered pockets, and a relaxed fit make it an ideal layer for cool
+                days outdoors or casual comfort indoors.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
