--- a/product/nightrider.html
+++ b/product/nightrider.html
@@ -104,14 +104,12 @@
             <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="NightRider Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The NightRider is a high-visibility waterproof jacket built for safety and performance
+                in low-light conditions. With reflective detailing, weather-sealed zippers, and durable
+                waterproof fabric, it keeps you dry and visible wherever you go. Designed for commuters
+                and adventurers who never stop when the sun goes down.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
