--- a/product/aerolite-shell.html
+++ b/product/aerolite-shell.html
@@ -104,14 +104,12 @@
             <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="AeroLite Shell Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The AeroShell Lite is a lightweight, wind-resistant shell jacket designed for
+                unpredictable weather. Built with breathable, water-repellent fabric, it offers
+                protection without sacrificing comfort or mobility. Its streamlined fit, reflective
+                details, and packable design make it ideal for both city commutes and outdoor adventures.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
