--- a/product/stormguard-pro.html
+++ b/product/stormguard-pro.html
@@ -104,14 +104,12 @@
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="StormGuard Pro Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The StormGuard Pro is a premium waterproof expedition jacket engineered for extreme conditions.
+                Its multi-layer shell and reinforced panels deliver unmatched protection against wind, rain, and
+                cold. Adjustable cuffs, a storm-secure hood, and reflective accents make it the ultimate outer
+                layer for demanding weather and serious adventures.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
