--- a/product/trail-master-gtx.html
+++ b/product/trail-master-gtx.html
@@ -104,14 +104,12 @@
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="TrailMaster GTX Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The Trail Master is a rugged all-terrain jacket designed for endurance and adventure.
+                Its shell fabric technology delivers full waterproof and windproof protection, while strategic
+                ventilation and reinforced panels provide lasting comfort and durability.
+                Built for riders and explorers who demand reliability on every trail.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
