--- a/product/urban-shield.html
+++ b/product/urban-shield.html
@@ -104,14 +104,12 @@
             <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket">
         </div>
         <div class="product-summary">
-            <p>This jacket is designed to provide lasting comfort and protection,
-                no matter the season. Constructed with durable fabrics and refined detailing,
-                it shields you from the elements while remaining breathable and lightweight.
-                The fit ensures both freedom of movement and a flattering silhouette,
-                making it a versatile choice for workdays, weekends, and everything in
-                between. A jacket that combines strength, style, and everyday ease.</p>
+            <p>The Urban Shield is a lightweight everyday jacket that combines minimalist design with
+                practical weather resistance. Its water-repellent outer layer and elastic cuffs provide
+                comfort and protection for city life and casual outdoor use. Reliable, simple, and built
+                for movement - your go-to layer for unpredictable days.</p>
+            <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
         </div>
-        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
