fixed horizontal overflow on product pages

--- a/product/stormguard-pro.html
+++ b/product/stormguard-pro.html
@@ -101,7 +101,8 @@
     <main>
         <div class="jacket-wrapper">
             <h1>StormGuard Pro</h1>
-            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="StormGuard Pro Jacket">
+            <p>£179</p>
+            <img src="../images/jackets/RainyDays_Jacket1.webp" alt="StormGuard Pro Jacket">
         </div>
         <div class="product-summary">
             <p>The StormGuard Pro is a premium waterproof expedition jacket engineered for extreme conditions.
