--- a/payment/index.html
+++ b/payment/index.html
@@ -81,84 +81,86 @@
     <main>
         <!-- Creating the input form for user contact information -->
         <section class="payment-contact-info">
-            <h1>Contact info</h1>
-            <form>
-                <div class="form-item">
-                    <label for="firstName">
-                        First Name*
-                    </label>
-                    <input id="firstName" type="text" name="firstName">
-                </div>
-                <div class="form-item">
-                    <label for="lastName">
-                        Last Name*
-                    </label>
-                    <input id="lastName" type="text" name="lastName">
-                </div><br>
-                <div class="form-item">
-                    <label for="email">
-                        Email*
-                    </label>
-                    <input id="email" type="email" name="email">
-                </div>
-                <br>
-                <br>
-                <div class="form-item">
-                    <label for="country">
-                        Country*
-                    </label>
-                    <input id="country" type="text" name="country">
-                </div>
-                <div class="form-item">
-                    <label for="phoneNumber">
-                        Phone Number
-                    </label>
-                    <input id="phoneNumber" type="tel" name="phoneNumber">
-                </div><br>
-                <div class="form-item">
-                    <label for="postalCode">
-                        Postal Code*
-                    </label>
-                    <input id="postalCode" inputmode="numeric" pattern="[0-9]*" name="postalCode">
-                </div>
-                <div class="form-item">
-                    <label for="streetAddress">
-                        Street Address*
-                    </label>
-                    <input id="streetAddress" type="text" name="streetAddress">
-                </div>
-            </form>
+            <div class="form-wrapper">
+                <h1>Contact info</h1>
+                <form>
+                    <div class="form-item">
+                        <label for="firstName">
+                            First Name*
+                        </label>
+                        <input id="firstName" type="text" name="firstName">
+                    </div>
+                    <div class="form-item">
+                        <label for="lastName">
+                            Last Name*
+                        </label>
+                        <input id="lastName" type="text" name="lastName">
+                    </div>
+                    <div class="form-item">
+                        <label for="email">
+                            Email*
+                        </label>
+                        <input id="email" type="email" name="email">
+                    </div><br>
+                    <div class="form-item">
+                        <label for="country">
+                            Country*
+                        </label>
+                        <input id="country" type="text" name="country">
+                    </div>
+                    <div class="form-item">
+                        <label for="phoneNumber">
+                            Phone Number
+                        </label>
+                        <input id="phoneNumber" type="tel" name="phoneNumber">
+                    </div>
+                    <div class="form-item">
+                        <label for="postalCode">
+                            Postal Code*
+                        </label>
+                        <input id="postalCode" inputmode="numeric" pattern="[0-9]*" name="postalCode">
+                    </div>
+                    <div class="form-item">
+                        <label for="streetAddress">
+                            Street Address*
+                        </label>
+                        <input id="streetAddress" type="text" name="streetAddress">
+                    </div>
+                </form>
+            </div>
         </section>
 
         <!-- Creating the payment form for user contact information -->
         <section class="payment-billing-info">
-            <h1>Payment info</h1>
-            <form>
-                <div class="form-item">
-                    <label for="cardNumber">
-                        Card Number
-                    </label>
-                    <input id="cardNumber" inputmode="numeric" pattern="[0-9]*" name="cardNumber">
-                </div><br>
-                <div class="form-item">
-                    <label for="ccv">
-                        CVV
-                    </label>
-                    <input id="ccv" inputmode="numeric" pattern="[0-9]*" name="ccv">
-                </div>
-                <div class="form-item">
-                    <label for="expirationDate">
-                        Expiration Date
-                    </label>
-                    <input id="expirationDate" type="date" name="expirationDate">
-                </div>
-                <div class="form-row">
-                    <label for="cardholderName">
-                        Cardholder Name
-                    </label>
-                    <input id="cardholderName" type="text" name="cardholderName">
-                </div>
-            </form>
+            <div class="form-wrapper">
+                <h1>Payment info</h1>
+                <form>
+                    <div class="form-item">
+                        <label for="cardNumber">
+                            Card Number
+                        </label>
+                        <input id="cardNumber" inputmode="numeric" pattern="[0-9]*" name="cardNumber">
+                    </div><br>
+                    <div class="form-item">
+                        <label for="ccv">
+                            CVV
+                        </label>
+                        <input id="ccv" inputmode="numeric" pattern="[0-9]*" name="ccv">
+                    </div>
+                    <div class="form-item">
+                        <label for="expirationDate">
+                            Expiration Date
+                        </label>
+                        <input id="expirationDate" type="date" name="expirationDate">
+                    </div>
+                    <div class="form-row">
+                        <label for="cardholderName">
+                            Cardholder Name
+                        </label>
+                        <input id="cardholderName" type="text" name="cardholderName">
+                    </div>
+                </form>
+            </div>
         </section>
 
 
